[project]
  name = "pulumi_terraform"
  description = "The Terraform provider for Pulumi lets you consume the outputs contained in Terraform state from your Pulumi programs."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["terraform", "kind/native", "category/utility"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "6.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-terraform"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_terraform = ["py.typed", "pulumi-plugin.json"]
